# plexus-transport

./: Cargo.toml  README.md
.hyperforge/: config.toml
docs/architecture/: 16671157983707995647_authentication-transport.md  16672703058450182141_http-gateway-architecture.md  16672703058450182142_streaming-protection-mechanisms.md  16672703058450182143_http-method-macro-implementation.md  16672711854663421183_protocol-methods.md  16677421176026603519_infrastructure-extraction-pattern.md  16677431963667456511_hub-transport-architecture.md  __index.md
plans/REQ/: REQ-0.md  REQ-1.md  REQ-2.md  REQ-3.md  REQ-4.md  REQ-5.md  REQ-6.md  REQ-7.md
spike/req/: Cargo.toml
spike/req/s01-schemars-extension/: Cargo.toml
spike/req/s01-schemars-extension/src/: main.rs
spike/req/s02-derive-two-impls/: Cargo.toml
spike/req/s02-derive-two-impls/src/: main.rs
spike/req/s03-required-field-gate/: Cargo.toml
spike/req/s03-required-field-gate/src/: main.rs
spike/req/s04-plexus-request-field/: Cargo.toml
spike/req/s04-plexus-request-field/src/: main.rs
spike/req/s05-macro-parse-request/: Cargo.toml
spike/req/s05-macro-parse-request/src/: main.rs
spike/req/s06-activation-param-strip/: Cargo.toml
spike/req/s06-activation-param-strip/src/: main.rs
spike/req/s07-request-schema-in-plugin/: Cargo.toml
spike/req/s07-request-schema-in-plugin/src/: main.rs
spike/req/s08-option-vs-required/: Cargo.toml
spike/req/s08-option-vs-required/src/: main.rs
spike/req/s09-no-request-backward-compat/: Cargo.toml
spike/req/s09-no-request-backward-compat/src/: main.rs
src/: combined.rs  config.rs  lib.rs  server.rs  stdio.rs  websocket.rs
src/http/: bridge.rs  handler.rs  mod.rs  server.rs
src/mcp/: bridge.rs  mod.rs  server.rs
src/request/: client_ip.rs  derive.rs  mod.rs  origin.rs  raw.rs  transport.rs
tests/: http_gateway_streaming_tests.rs  origin.rs  origin_uninitialised.rs  request_extract.rs  request_schema.rs
