[package]
name = "plexus-transport"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0-only"
description = "Transport implementations for Plexus RPC: WebSocket, HTTP/SSE"

[dependencies]
# Core dependencies
plexus-core = "0.3.0"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# JSON-RPC and WebSocket
jsonrpsee = { version = "0.26", features = ["server"] }

# MCP protocol
rmcp = { version = "0.12", features = ["server", "transport-streamable-http-server"] }

# HTTP server
axum = "0.8"

# Optional SQLite session storage (feature-gated)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
sqlite-sessions = ["sqlx", "tokio-stream"]
