[package]
name = "plexus-transport"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Transport implementations for Plexus RPC: WebSocket, HTTP/SSE"

[dependencies]
# Core dependencies
plexus-core = { path = "../plexus-core", version = "0.5" }
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# JSON-RPC and WebSocket
jsonrpsee = { version = "0.26", features = ["server"] }
hyper = { version = "1", features = ["full"], optional = true }
bytes = "1"
http-body = "1"

# MCP protocol
rmcp = { version = "0.12", features = ["server", "transport-streamable-http-server"] }

# HTTP server
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http = "1.0"  # For extracting HTTP request parts from RequestContext
form_urlencoded = "1.2"  # For parsing query parameters

# Optional SQLite session storage (feature-gated)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
async-stream = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.5"
# plexus-schemars-compat aliased as "schemars" so that #[derive(schemars::JsonSchema)]
# in tests resolves to the no-op derive, preventing duplicate impl JsonSchema conflicts
# with PlexusRequest's generated impl. All real schemars types/macros are re-exported.
schemars = { path = "../plexus-schemars-compat", package = "plexus-schemars-compat" }
plexus-macros = { path = "../plexus-macros" }
plexus-core = { path = "../plexus-core", version = "0.5" }

[features]
default = []
mcp-gateway = ["hyper"]
http-gateway = ["hyper"]
sqlite-sessions = ["sqlx", "tokio-stream"]
