[package]
name = "s06-activation-param-strip"
version = "0.1.0"
edition = "2021"

[dependencies]
plexus-macros = { path = "../../../../plexus-macros" }
plexus-core = { path = "../../../../plexus-core" }
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "v5"] }
jsonrpsee = { version = "0.26", features = ["server"] }
plexus-transport = { path = "../../../../plexus-transport" }
