[package]
name = "s08-option-vs-required"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "1.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "v5"] }
jsonrpsee = { version = "0.26", features = ["server"] }
plexus-transport = { path = "../../../../plexus-transport" }
